[project]
name = "python-playground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "tackman", email = "tackman@tackman.info" }
]
dependencies = [
    "numpy>=1.24.4",
    "pandas>=2.0.3",
    "matplotlib>=3.7.3",
    "scipy>=1.10.1",
    "seaborn>=0.13.0",
    "scikit-learn>=1.3.2",
    "tensorflow>=2.13.1",
    "statsmodels>=0.14.0",
    "sympy>=1.12",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
